# rcsv

./: Cargo.toml  LICENSE.txt  README.md
examples/: simple.rs
resources/: test1.csv
src/: lib.rs
src/mmap/: file_mapper.rs  mod.rs
src/readers/: buffer_reader.rs  file_mapper.rs  mmap_reader.rs  mod.rs  string_reader.rs
tests/: mod.rs
