[package]
name = "rcsv"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"
description = "A non-allocating RFC 4180 compliant CSV parser."
readme = "README.md"
repository = "https://github.com/bibhas2/rcsv"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[target.'cfg(unix)'.dependencies]
libc = "0.2"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "fileapi", "handleapi", "memoryapi", "std"] }
